[package]
name = "school-build-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
actix-ws = "0.3"
tokio = { version = "1", features = ["full", "process" ] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
dirs = "5.0"
chrono = "0.4"
reqwest = { version = "0.11.0" }
openssl = { version = "0.10" }